--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,7 @@ font-family: 'Poppins', sans-serif;
     line-height: 50px;
     padding: 0 36px;
     transition: 0.3s;
+    margin-top: 20px;
 }
 
 .fr__btn:hover {
