Login Page Updated

--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -311,23 +311,50 @@ ul li:hover ul.dropdown {
 
 
 /* LOGIN */
-.login_wrapper {
-  /* background-color: #fff; */
+#login {
+  margin-top: 10px;
 }
 
-.tabs .tab a {
-  color: rgba(32, 32, 32, 0.7);
-  font-size: 1.2em;
+.card {
+  background-color: rgb(66, 42, 77);
 }
 
-.tabs .tab a:hover,
-.tabs .tab a.active {
-  background-color: transparent;
-  color: rgb(243, 142, 198);
+.input-field>label {
+  color: #fff;
 }
 
-.tabs .indicator {
-  background-color: rgb(243, 142, 198);
+input:not([type]):focus:not([readonly])+label,
+input[type=text]:not(.browser-default):focus:not([readonly])+label,
+input[type=password]:not(.browser-default):focus:not([readonly])+label,
+input[type=email]:not(.browser-default):focus:not([readonly])+label,
+input[type=url]:not(.browser-default):focus:not([readonly])+label,
+input[type=time]:not(.browser-default):focus:not([readonly])+label,
+input[type=date]:not(.browser-default):focus:not([readonly])+label,
+input[type=datetime]:not(.browser-default):focus:not([readonly])+label,
+input[type=datetime-local]:not(.browser-default):focus:not([readonly])+label,
+input[type=tel]:not(.browser-default):focus:not([readonly])+label,
+input[type=number]:not(.browser-default):focus:not([readonly])+label,
+input[type=search]:not(.browser-default):focus:not([readonly])+label,
+textarea.materialize-textarea:focus:not([readonly])+label {
+  color: #c4c4c4;
+}
+
+input:not([type]):focus:not([readonly]),
+input[type=text]:not(.browser-default):focus:not([readonly]),
+input[type=password]:not(.browser-default):focus:not([readonly]),
+input[type=email]:not(.browser-default):focus:not([readonly]),
+input[type=url]:not(.browser-default):focus:not([readonly]),
+input[type=time]:not(.browser-default):focus:not([readonly]),
+input[type=date]:not(.browser-default):focus:not([readonly]),
+input[type=datetime]:not(.browser-default):focus:not([readonly]),
+input[type=datetime-local]:not(.browser-default):focus:not([readonly]),
+input[type=tel]:not(.browser-default):focus:not([readonly]),
+input[type=number]:not(.browser-default):focus:not([readonly]),
+input[type=search]:not(.browser-default):focus:not([readonly]),
+textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #d1d1d1;
+  -webkit-box-shadow: 0 1px 0 0 #d1d1d1;
+  box-shadow: 0 1px 0 0 #d1d1d1;
 }
 
 #submit_button.btn-large {
