--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -20,7 +20,8 @@ p {
 
 .sidenav-trigger {
   color: rgb(190, 0, 105);
-  margin-top: 10px !important;
+  margin-top: 1vh !important;
+
 }
 
 .parallax-container {
@@ -121,26 +122,24 @@ ul li:hover ul.dropdown {
   /* Display the dropdown */
 }
 
-#nav_cart {
-  margin-left: 10px;
-
+nav i,
+nav [class^="mdi-"],
+nav [class*="mdi-"],
+nav i.material-icons {
+  display: unset;
 }
 
 .material-icons-outlined {
-  margin-top: 15px;
   font-weight: 300;
-  color: #925692;
+  color: #442644c5;
   vertical-align: middle;
-  font-size: 40px;
+  display: inline;
 }
 
 @media screen and (max-width: 992px) {
   .material-icons-outlined {
-    margin-top: 0px;
-    font-weight: 300;
     color: rgb(156, 0, 86);
     vertical-align: unset;
-    font-size: 30px;
   }
 }
 
@@ -151,6 +150,10 @@ ul li:hover ul.dropdown {
 .slider-container {
   padding: 5%;
   background-color: rgb(245, 245, 245);
+}
+
+.carousel.carousel-slider {
+  max-height: 60vh;
 }
 
 .text-translate {
@@ -172,33 +175,40 @@ ul li:hover ul.dropdown {
   height: 70px;
   line-height: 70px;
   font-size: larger;
-  background-color: rgb(255, 102, 186);
+  background: rgb(255, 90, 90);
+  background: linear-gradient(90deg, rgba(255, 90, 90, 1) 0%, rgba(253, 123, 29, 1) 44%, rgba(252, 176, 69, 1) 100%);
   color: rgb(255, 255, 255);
 
 }
 
 #banner_button.btn-large:hover {
-  background-color: rgb(255, 255, 255);
+  background: rgb(255, 255, 255);
   color: rgb(36, 36, 36);
   border: solid #444 1px;
 }
 
 @media screen and (max-width: 768px) {
+
+  .carousel.carousel-slider {
+    max-height: 45vh;
+  }
+
   .text-translate {
     transform: translateX(0px);
 
   }
 
   .slider-title {
+    padding: 3%;
     font-size: 2.7em;
   }
 
   .btn-large {
-    width: 150px;
+    width: 150px !important;
     transform: translateX(0px) !important;
-    height: 40px;
-    line-height: 40px;
-    font-size: smaller;
+    height: 50px !important;
+    line-height: 50px !important;
+    font-size: smaller !important;
 
   }
 }
@@ -228,6 +238,12 @@ ul li:hover ul.dropdown {
 
 
 /* card */
+.box_shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transform: translate(3px,3px);
+  transition: ease-in-out 140ms;
+}
+
 
 .dress-card {
   border: solid rgb(219, 219, 219) 1px;
@@ -304,7 +320,7 @@ ul li:hover ul.dropdown {
 
 #all_product_button.btn-large {
   margin: 20px;
-  background-color: rgb(255, 102, 186);
+  background-color: rgb(75, 75, 75);
   color: rgb(255, 255, 255);
 
 }
@@ -406,7 +422,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
   z-index: -1;
   padding-top: 2%;
   padding-bottom: 2%;
-  background-color: rgba(29, 29, 29, 0.459);
+  background-color: rgba(29, 29, 29, 0.562);
 }
 
 .breadcrumb_wrapper a {
