--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -98,6 +98,9 @@ nav {
 nav ul a:hover {
   background-color: rgba(255, 0, 0, 0.1);
 }
+.row .col.push-custom {
+  left: 13% !important;
+}
 
 /* DROPDOWN */
 nav ul li {
