--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -79,6 +79,7 @@ body {
 nav {
   height: 15vh !important;
   line-height: 15vh;
+  overflow: hidden;
   text-transform: uppercase;
 }
 
@@ -137,6 +138,10 @@ nav i.material-icons {
 }
 
 @media screen and (max-width: 992px) {
+  .brand-logo {
+    font-size: 1.5rem !important;
+  }
+
   .material-icons-outlined {
     color: rgb(156, 0, 86);
     vertical-align: unset;
@@ -754,9 +759,15 @@ select {
 
 /* FOOTER */
 
-footer{
-  
+footer {}
+
+.brand-logo-footer {
+  font-size: 2.1rem !important;
+  font-family: 'Oswald', sans-serif;
+
 }
+
+
 footer.page-footer {
   margin: 0;
   background-color: rgb(66, 42, 77);
@@ -789,13 +800,13 @@ footer.page-footer {
   font-size: 1em !important;
 }
 
-.socials a{
+.socials a {
   color: rgb(248, 248, 248);
   margin: 4%;
   font-size: 2.5rem;
 }
 
-.socials a:hover{
+.socials a:hover {
   color: rgb(197, 197, 197);
 }
 
@@ -810,11 +821,11 @@ footer.page-footer {
     padding: 2%;
   }
 
-  .socials a{
+  .socials a {
     margin: 2%;
     font-size: 1.5rem;
   }
-  
+
 }
 
 
