--- a/css/style.css
+++ b/css/style.css
@@ -505,6 +505,28 @@ textarea.materialize-textarea:focus:not([readonly]) {
   background-color: #c43b68;
 }
 
+#category_card_button.btn-large {
+  width: 200px;
+  transform: translateX(20px);
+  height: 70px;
+  line-height: 70px;
+  font-size: larger;
+  background: rgb(182, 93, 182);
+  background: -moz-linear-gradient(90deg, rgba(182, 93, 182, 1) 0%, rgba(128, 118, 181, 1) 44%, rgba(176, 69, 252, 1) 100%);
+  background: -webkit-linear-gradient(90deg, rgba(182, 93, 182, 1) 0%, rgba(128, 118, 181, 1) 44%, rgba(176, 69, 252, 1) 100%);
+  background: linear-gradient(90deg, rgba(182, 93, 182, 1) 0%, rgba(128, 118, 181, 1) 44%, rgba(176, 69, 252, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b65db6", endColorstr="#b045fc", GradientType=1);
+  color: rgb(255, 255, 255);
+
+}
+
+#category_card_button.btn-large:hover {
+  background: rgb(255, 255, 255);
+  color: rgb(36, 36, 36);
+  border: solid #444 1px;
+}
+
+
 /* BUTTONS - END */
 .input-field .prefix.active {
   color: rgb(206, 206, 206);
@@ -786,6 +808,90 @@ select {
 }
 
 /* FILTERS - END */
+
+
+/* SUPER CATEGORIES */
+
+
+.snip1581 {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  background-color: #000000;
+  color: #ffffff;
+  text-align: left;
+  font-size: 16px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+
+.snip1581 * {
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.snip1581 img {
+  width: auto;
+  max-width: 100%;
+  object-fit: cover;
+  vertical-align: top;
+}
+
+.snip1581 figcaption {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 20px;
+  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0,0.973) 0%, transparent 100%);
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.973) 0%, transparent 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.snip1581 h3 {
+  font-size: 1.5em;
+  font-weight: 400;
+  line-height: 1.15;
+  letter-spacing: 1px;
+  /* text-transform: uppercase; */
+  margin: 3px 0;
+}
+
+.snip1581 .title1 {
+  font-weight: 700;
+}
+
+.snip1581 .title2 {
+  color: #e9e9e9;
+  font-weight: 300;
+}
+
+.snip1581 .title3 {
+  /* font-weight: 700; */
+  font-size: 25px;
+}
+
+.snip1581 a {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.snip1581:hover img,
+.snip1581.hover img {
+  -webkit-transform: scale(1..1) rotate(1deg);
+  transform: scale(1.1) rotate(1deg);
+}
+
+/* SUPER CATEGORIES - END */
+
+
 
 /* FOOTER */
 
